2006-12-19  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	Add support for cr3/cr4 flags.
	* i386/i386/proc_reg.h (CR3_PCD, CR3_PWT, CR4_VME, CR4_PVI, CR4_TSD)
	(CR4_DE, CR4_PSE, CR4_PAE, CR4_MCE, CR4_PGE, CR4_PCE, CR4_OSFXSR)
	(CR4_OSXMMEXCPT, get_cr4, set_cr4): New macros.
	* i386/intel/pmap.h (INTEL_PTE_GLOBAL): New macro.

	Add support for querying x86 features.
	* i386/i386/locore.h (cpu_features): New variable declaration.
	(CPU_FEATURE_FPU, CPU_FEATURE_VME, CPU_FEATURE_DE, CPU_FEATURE_PSE)
	(CPU_FEATURE_TSC, CPU_FEATURE_MSR, CPU_FEATURE_PAE, CPU_FEATURE_MCE)
	(CPU_FEATURE_CX8, CPU_FEATURE_APIC, CPU_FEATURE_SEP, CPU_FEATURE_MTRR)
	(CPU_FEATURE_PGE, CPU_FEATURE_MCA, CPU_FEATURE_CMOV, CPU_FEATURE_PAT)
	(CPU_FEATURE_PSE_36, CPU_FEATURE_PSN, CPU_FEATURE_CFLSH)
	(CPU_FEATURE_DS, CPU_FEATURE_ACPI, CPU_FEATURE_MMX, CPU_FEATURE_FXSR)
	(CPU_FEATURE_SSE, CPU_FEATURE_SSE2, CPU_FEATURE_SS, CPU_FEATURE_HTT)
	(CPU_FEATURE_TM, CPU_FEATURE_PBE, CPU_HAS_FEATURE): New macros.
	* i386/i386/locore.S (cpu_features): New variable.
	(discover_x86_cpu_type): Record CPUID feature word 0.

2006-12-13  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	Drop useless and broken FPE support.
	* i386/configfrac.ac (FPE): Don't define.
	* i386/i386/gdt.h (FPE_CS, USER_FPREGS): Remove macros.
	* i386/i386/fpu.c (init_fpu, fpu_set_state, fpu_get_state): Remove FPE
	support.
	* i386/i386/fpu.h: Likewise.
	* i386/i386/trap.c (user_trap, i386_exception): Likewise.
	* i386/i386/fpe_linkage.c: Remove file.
	* i386/Makefrag.am: Remove i386/i386/fpe_linkage.c.
	* Makefile.in: Regenerate.

2006-12-03  Thomas Schwinge  <tschwinge@gnu.org>

	[patch #5019 --- ``Remove checks for continuations'']

	* DEVELOPMENT: Document the removal.

	* i386/configfrag.ac (CONTINUATIONS): Don't define.

2006-12-03  Leonardo Lopes Pereira  <leonardolopespereira@gmail.com>

	[patch #5019 --- ``Remove checks for continuations'']
	* ipc/mach_msg.c: Adapt all users of CONTINUATIONS as if it were always
	defined.